--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,7 @@
 	"devDependencies": {
 		"@biomejs/biome": "2.0.6",
 		"@types/node": "^24.0.11",
-		"drizzle-kit": "^0.18.1",
+		"drizzle-kit": "^0.31.4",
 		"drizzle-seed": "^0.3.1",
 		"typescript": "^5.8.3",
 		"ultracite": "5.0.32"
@@ -25,7 +25,8 @@
 	"dependencies": {
 		"@fastify/cors": "^11.0.1",
 		"@fastify/multipart": "^9.0.3",
-		"drizzle-orm": "^0.44.2",
+		"@google/genai": "^1.11.0",
+		"drizzle-orm": "^0.44.3",
 		"fastify": "^5.4.0",
 		"fastify-type-provider-zod": "^5.0.2",
 		"postgres": "^3.4.7",
